<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>xyz.zhouxy.jdbc</groupId>
    <artifactId>simple-jdbc</artifactId>
    <version>1.1.0-SNAPSHOT</version>

    <name>Simple JDBC</name>
    <description>对 JDBC 的简单封装。</description>
    <url>https://gitea.zhouxy.xyz/plusone/simple-jdbc</url>

    <properties>
        <!--
          构建要求：JDK 17+
          原因：jspecify 的 @NullMarked 注解使用了 ElementType.MODULE（Java 9 引入），
          JDK 8 的 javac 无法解析该注解，因此当前项目选择使用 JDK 17 运行 Maven 构建。
          但 source/target 设为 8，确保构建产物兼容 JDK 8 运行时。
        -->
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Dependency Versions -->
        <jspecify.version>1.0.0</jspecify.version>
        <junit-jupiter.version>5.14.4</junit-jupiter.version>
        <logback.version>1.3.16</logback.version>
        <h2.version>2.2.224</h2.version>
    </properties>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Zhou Xingyi (周兴毅)</name>
            <url>https://gitea.zhouxy.xyz/plusone</url>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://gitea.zhouxy.xyz/plusone/simple-jdbc.git</connection>
        <developerConnection>scm:git:ssh://gitea.zhouxy.xyz/plusone/simple-jdbc.git</developerConnection>
        <url>https://gitea.zhouxy.xyz/plusone/simple-jdbc</url>
    </scm>

    <dependencies>
        <dependency>
            <groupId>org.jspecify</groupId>
            <artifactId>jspecify</artifactId>
            <version>${jspecify.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${h2.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>enforce-java-version</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[17,)</version>
                                    <message>构建需要 JDK 17+，当前 JDK 版本不满足要求。
原因：jspecify 的 @NullMarked 注解使用了 ElementType.MODULE（Java 9 引入），
JDK 8 的 javac 无法解析该注解。请使用 JDK 17 或更高版本运行 Maven 构建。
注意：构建产物 target 为 JDK 8，运行时仍可使用 JDK 8。</message>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <!-- GPG -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.8</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.11.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
